# rust_test_repo_dont_use_it_1337

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: deploy.yml  publish.yml  rust_reusable.yml
.github/workflows/prepare/: action.yml
src/: main.rs
