[package]
name = "rust_test_repo_dont_use_it_1337"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0", features = ["chrono_0_4"] }
chrono = "0.4"
lazy_static = "1.4.0"
tera = "1"
