[package]
name = "rust_test_repo_dont_use_it_1337"
version = "1.0.1"
authors = ["Sora <djsora7771@gmail.com>"]
categories = ["multimedia", "multimedia::audio", "science", "text-processing", "visualization"]
description = "TODO"
edition = "2021"
homepage = "https://yandex.ru"
keywords = ["todo1", "todo2"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/djsora/rust_test_repo_dont_use_it_133"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
scraper = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.0", features = ["chrono_0_4"] }
chrono = "0.4"
lazy_static = "1.4.0"
tera = "1"
